<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_service"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_start_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_service"/>
            <Button
                android:id="@+id/bt_stop_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_service"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comm_service"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_bind_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_service"/>
            <Button
                android:id="@+id/bt_unbind_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unbind_service"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>